--- a/styles/style.css
+++ b/styles/style.css
@@ -644,15 +644,13 @@ ul {
 .aboutUsInfoContainer .tags p {
   background-color: lightcoral;
   height: 40px;
-  padding: 0 10px;
+  padding: 0 15px;
   border-radius: 100px;
   color: #fafafa;
+  font-weight: bold;
   line-height: 40px;
-}
-
-.aboutUsInfoContainer .tags p:not(:last-child) {
-  margin-right: 20px;
   margin-bottom: 10px;
+  margin-right: 10px;
 }
 
 .aboutUsImageContainer {
